--- a/details.html
+++ b/details.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Final Project - TennisShop Online Store</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Details</title>
+    <link rel="stylesheet" href="details.css" />
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
@@ -38,14 +38,8 @@
           <div class="menu-line"></div>
         </div>
       </nav>
-
-      <div id="banner"></div>
-      <div id="sidebar">
-        <div id="price-filter"></div>
-      </div>
-      <div id="main" class="productList"></div>
-      <div id="footer"></div>
     </div>
-    <script type="module" src="app.js"></script>
+    <div class="product-details"></div>
+    <script src="details.js"></script>
   </body>
 </html>
