--- a/details.html
+++ b/details.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container">
-      <nav id="navbar">
+      <nav id="navbar-details">
         <div class="primary-logo">
           <a href="index.html"> <img src="img/logo.png" class="logo-pic" /></a>
         </div>
@@ -40,6 +40,6 @@
       </nav>
     </div>
     <div class="product-details"></div>
-    <script src="details.js"></script>
+    <script type="module" src="details.js"></script>
   </body>
 </html>
