--- a/admin.html
+++ b/admin.html
@@ -24,7 +24,7 @@
       </div>
       <div class="cart-admin">
         <ul class="nav-list" id="navi-list">
-          <li class="btn btn-primary">
+          <li class="btn btn-primary nav-button">
             <a href="cart.html"
               ><i class="fa-sharp fa-solid fa-cart-shopping"></i> Cart</a
             >
@@ -59,10 +59,10 @@
         <div class="add-product-form">
           <div class="item">
             <div class="label-item">
-              <label for="image">Imagine:</label>
+              <label for="image">image:</label>
             </div>
             <div class="input-item">
-              <input type="text" id="image" />
+              <input for="image" id="image" />
             </div>
 
             <div class="label-item">
@@ -98,7 +98,7 @@
               <th scope="row">#</th>
               <td>Images</td>
               <td>Product description</td>
-              <td>Price $</td>
+              <td>Price RON</td>
               <td></td>
             </tr>
           </thead>
