--- a/admin.html
+++ b/admin.html
@@ -155,6 +155,6 @@
         </table>
       </div>
     </div>
-    <script type="module" src="admin.js"></script>
+    <script type="module" src="src/admin.js"></script>
   </body>
 </html>
