--- a/cart.html
+++ b/cart.html
@@ -42,10 +42,10 @@
     <section class="productsInCart"></section>
     <div class="totalPrice"></div>
     <section class="h-100" style="background-color: #eee">
-      <div class="container h-100 py-5">
-        <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="container h-100 py-5" >
+        <div class="row d-flex justify-content-center align-items-center h-100" >
           <div class="col-10">
-            <div class="d-flex justify-content-between align-items-center mb-4">
+            <div class="d-flex justify-content-between align-items-center mb-4"  >
               <h3 class="fw-normal mb-0 text-black">Shopping Cart</h3>
               <div>
                 <p class="mb-0">
@@ -58,7 +58,7 @@
             </div>
 
             <div class="card mb-4">
-              <div class="card-body p-4 d-flex flex-row">
+              <div class="card-body p-4 d-flex flex-row" >
                 <div class="form-outline flex-fill">
                   <input
                     type="text"
@@ -91,6 +91,6 @@
         </div>
       </div>
     </section>
-    <script type="module" src="cart.js"></script>
+    <script type="module" src="src/cart.js"></script>
   </body>
 </html>
