--- a/details.html
+++ b/details.html
@@ -40,6 +40,7 @@
       </nav>
     </div>
     <div class="product-details"></div>
-    <script type="module" src="details.js"></script>
+
+    <script type="module" src="src/details.js"></script>
   </body>
 </html>
