--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
       <div id="main" class="productList"></div>
       <div id="footer"></div>
     </div>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="src/app.js"></script>
   </body>
 </html>
