--- a/admin.html
+++ b/admin.html
@@ -141,14 +141,13 @@
         </div>
       </div>
       <div id="product-list">
-        <table class="table table-dark">
-          <thead>
-            <tr>
+        <table class="table ">
+          <thead class="thead">
+            <tr class="tr">
               <th scope="row">#</th>
               <td>Images</td>
               <td>Product description</td>
               <td>Price RON</td>
-              <td></td>
             </tr>
           </thead>
           <tbody id="products-table-body"></tbody>
