--- a/cart.html
+++ b/cart.html
@@ -41,12 +41,12 @@
     </div>
     <section class="productsInCart"></section>
     <div class="totalPrice"></div>
-    <section class="h-100" style="background-color: #eee">
-      <div class="container h-100 py-5" >
+    <section class="h-100">
+      <div class="container  py-5" >
         <div class="row d-flex justify-content-center align-items-center h-100" >
           <div class="col-10">
             <div class="d-flex justify-content-between align-items-center mb-4"  >
-              <h3 class="fw-normal mb-0 text-black">Shopping Cart</h3>
+              <h3 class="fw-normal mb-0 ">Shopping Cart</h3>
               <div>
                 <p class="mb-0">
                   <span class="text-muted">Sort by:</span>
@@ -81,8 +81,7 @@
                 <button
                   id="message"
                   type="button"
-                  class="btn btn-warning btn-block btn-lg displaymessage"
-                >
+                  class="btn btn-warning btn-block btn-lg displaymessage">
                   Proceed to Pay
                 </button>
               </div>
@@ -91,6 +90,6 @@
         </div>
       </div>
     </section>
-    <script type="module" src="src/cart.js"></script>
+    <script  src="src/cart.js"></script>
   </body>
 </html>
