--- a/details.html
+++ b/details.html
@@ -41,6 +41,6 @@
     </div>
     <div class="product-details"></div>
 
-    <script type="module" src="src/details.js"></script>
+    <script src="src/details.js"></script>
   </body>
 </html>
