--- a/index.html
+++ b/index.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Final Project - TennisShop Online Store</title>
+    <title>Final Project - Adventure lies Ahead</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"
-    />
-    <link rel="icon" type="image/x-icon" href="img/Favicon.png" />
+    <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"/> -->
+    <link rel="icon" type="image/x-icon" href="img/Favicon.png" /> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
   <body>
     <div class="container">
@@ -24,9 +20,7 @@
         </div>
         <ul class="nav-list" id="navi-list">
           <li class="btn btn-primary">
-            <a href="cart.html"
-              ><i class="fa-sharp fa-solid fa-cart-shopping"></i> Cart</a
-            >
+            <a href="cart.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> Cart</a>
           </li>
           <li class="btn btn-light">
             <a href="admin.html"><i class="fa-solid fa-lock"></i> Admin</a>
@@ -46,6 +40,6 @@
       <div id="main" class="productList"></div>
       <div id="footer"></div>
     </div>
-    <script type="module" src="src/app.js"></script>
+    <script  src="src/app.js"></script>
   </body>
 </html>
