--- a/cart.html
+++ b/cart.html
@@ -19,9 +19,7 @@
         </div>
         <ul class="nav-list" id="navi-list">
           <li class="btn btn-primary">
-            <a href="cart.html"
-              ><i class="fa-sharp fa-solid fa-cart-shopping"></i> Cart</a
-            >
+            <a href="cart.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> Cart</a>
           </li>
           <li class="btn btn-light">
             <a href="admin.html"><i class="fa-solid fa-lock"></i> Admin</a>
@@ -51,21 +49,18 @@
                 </p>
               </div>
             </div>
-
             <div class="card mb-4">
               <div class="card-body p-4 d-flex flex-row" >
                 <div class="form-outline flex-fill">
                   <input
                     type="text"
                     id="form1"
-                    class="form-control form-control-lg"
-                  />
+                    class="form-control form-control-lg"/>
                   <label class="form-label" for="form1">Discound code</label>
                 </div>
                 <button
                   type="button"
-                  class="btn btn-outline-warning btn-lg ms-3"
-                >
+                  class="btn btn-outline-warning btn-lg ms-3">
                   Apply
                 </button>
               </div>
