--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="admin.css"/>
     <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"/> -->
-    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
@@ -16,15 +15,12 @@
     <nav id="navbar-admin">
       <div class="primary-logo-admin">
         <a href="index.html">
-          <img src="img/logo.png" class="logo-pic-admin"
-        /></a>
+          <img src="img/logo.png" class="logo-pic-admin"/></a>
       </div>
       <div class="cart-admin">
         <ul class="nav-list" id="navi-list">
           <li class="btn btn-primary nav-button">
-            <a href="cart.html"
-              ><i class="fa-sharp fa-solid fa-cart-shopping"></i> Cart</a
-            >
+            <a href="cart.html"><i class="fa-sharp fa-solid fa-cart-shopping"></i> Cart</a>
           </li>
         </ul>
       </div>
@@ -54,7 +50,6 @@
             <button class="btn btn-danger">Cancel</button>
           </div>
         </div>
-
         <div class="add-product-form">
           <div class="item">
             <div class="label-item">
@@ -63,7 +58,6 @@
             <div class="input-item">
               <input for="image" id="image" />
             </div>
-
             <div class="label-item">
               <label for="name">Nume:</label>
             </div>
@@ -100,7 +94,6 @@
             <button class="btn btn-danger">Cancel</button>
           </div>
         </div>
-
         <div class="edit-product-form">
           <div class="item">
             <div class="label-item">
@@ -110,7 +103,6 @@
               <input for="image" id="image" />
               <input id="id" type="hidden" />
             </div>
-
             <div class="label-item">
               <label for="name">Nume:</label>
             </div>
